--- a/charts/consul/templates/create-federation-secret-job.yaml
+++ b/charts/consul/templates/create-federation-secret-job.yaml
@@ -66,13 +66,6 @@ spec:
             items:
               - key: {{ default "tls.key" .Values.global.tls.caKey.secretKey }}
                 path: tls.key
-        {{- /* We must incude both auto-encrypt and server CAs because we make API calls to the local
-            Consul client (requiring the auto-encrypt CA) but the secret generated must include the server CA */}}
-        {{- if .Values.global.tls.enableAutoEncrypt }}
-        - name: consul-auto-encrypt-ca-cert
-          emptyDir:
-            medium: "Memory"
-        {{- end }}
         {{- if (and .Values.global.gossipEncryption.secretName .Values.global.gossipEncryption.secretKey) }}
         - name: gossip-encryption-key
           secret:
@@ -89,11 +82,6 @@ spec:
                 path: gossip.key
         {{- end }}
 
-      {{- if .Values.global.tls.enableAutoEncrypt }}
-      initContainers:
-      {{- include "consul.getAutoEncryptClientCA" . | nindent 6 }}
-      {{- end }}
-
       containers:
         - name: create-federation-secret
           image: "{{ .Values.global.imageK8S }}"
@@ -102,18 +90,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: HOST_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.hostIP
             - name: CONSUL_HTTP_ADDR
-              value: https://$(HOST_IP):8501
+              value: "https://{{ template "consul.fullname" . }}-server.{{ .Release.Namespace }}.svc:8501"
             - name: CONSUL_CACERT
-              {{- if .Values.global.tls.enableAutoEncrypt }}
-              value: /consul/tls/client/ca/tls.crt
-              {{- else }}
               value: /consul/tls/ca/tls.crt
-              {{- end }}
           volumeMounts:
             - name: consul-ca-cert
               mountPath: /consul/tls/ca
@@ -121,11 +101,6 @@ spec:
             - name: consul-ca-key
               mountPath: /consul/tls/server/ca
               readOnly: true
-            {{- if .Values.global.tls.enableAutoEncrypt }}
-            - name: consul-auto-encrypt-ca-cert
-              mountPath: /consul/tls/client/ca
-              readOnly: true
-            {{- end }}
             {{- if (or .Values.global.gossipEncryption.autoGenerate (and .Values.global.gossipEncryption.secretName .Values.global.gossipEncryption.secretKey)) }}
             - name: gossip-encryption-key
               mountPath: /consul/gossip
