Register Terminating Gateways with Endpoints Controller (#1469)
- Added a `terminating-gateway-service.yaml` template. In order to register the deployment with the Endpoints Controller, a "dummy" service must exist so that a Kubernetes endpoint object is created, triggering the Endpoints Controller reconcile loop.
- Modified the `terminating-gateway-deployment.yaml` template:
  - Added a "managed by" label.
  - Added annotations to configure the behavior of the Endpoints Controller during registration.
  - Removed the `copy-consul-bin` init container.
  - Changed the `terminating-gateway-init` init container to use `connect-init` instead of `acl-init` as the client `acl-init` talked to will no longer exist in agentless.
  - Removed the `preStop` hook from the `terminating-gateway` container.
  - Removed the `consul-sidecar` container in preparation for the blessings of the Consul Dataplane. 
- Removed BATS tests which covered features no longer present in agentless.
- Added BATS tests for `terminating-gateway-service` and for Consul namespace handling in `terminating-gateway-deployment`.
- Added annotation `consul.hashicorp.com/terminating-gateway-namespace` to configure which Consul namespace a terminating gateway will be placed in when using Consul Enterprise.
- Modified the Endpoints Controller to register terminating gateways
  - Added a `switch` to the `createGatewayRegistrations` method which handles configuration of the endpoint particular to the terminating gateway.
  - Added unit tests which verify the registrations created by `createGatewayRegistrations` is correct.
  - Added a unit test to verify the the `Reconcile` method does register the endpoint.

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>
Co-authored-by: Ashwin Venkatesh <ashwin.what@gmail.com>
Co-authored-by: Ashwin Venkatesh <ashwin@hashicorp.com>

--- a/charts/consul/templates/mesh-gateway-deployment.yaml
+++ b/charts/consul/templates/mesh-gateway-deployment.yaml
@@ -34,7 +34,7 @@ spec:
         consul.hashicorp.com/connect-inject-managed-by: consul-k8s-endpoints-controller
       annotations:
         "consul.hashicorp.com/connect-inject": "false"
-        "consul.hashicorp.com/gateway-kind": "mesh"
+        "consul.hashicorp.com/gateway-kind": "mesh-gateway"
         "consul.hashicorp.com/mesh-gateway-consul-service-name": "{{ .Values.meshGateway.consulServiceName }}"
         "consul.hashicorp.com/mesh-gateway-wan-address-source": "{{ .Values.meshGateway.wanAddress.source }}"
         "consul.hashicorp.com/mesh-gateway-container-port": "{{ .Values.meshGateway.containerPort }}"
