--- a/charts/consul/templates/terminating-gateways-deployment.yaml
+++ b/charts/consul/templates/terminating-gateways-deployment.yaml
@@ -1,7 +1,6 @@
 {{- if .Values.terminatingGateways.enabled }}
 {{- if not .Values.connectInject.enabled }}{{ fail "connectInject.enabled must be true" }}{{ end -}}
 {{- if and .Values.global.adminPartitions.enabled (not .Values.global.enableConsulNamespaces) }}{{ fail "global.enableConsulNamespaces must be true if global.adminPartitions.enabled=true" }}{{ end }}
-{{- if .Values.global.lifecycleSidecarContainer }}{{ fail "global.lifecycleSidecarContainer has been renamed to global.consulSidecarContainer. Please set values using global.consulSidecarContainer." }}{{ end }}
 
 {{- $root := . }}
 {{- $defaults := .Values.terminatingGateways.defaults }}
@@ -66,7 +65,13 @@ spec:
         release: {{ $root.Release.Name }}
         component: terminating-gateway
         terminating-gateway-name: {{ template "consul.fullname" $root }}-{{ .name }}
+        consul.hashicorp.com/connect-inject-managed-by: consul-k8s-endpoints-controller
       annotations:
+        "consul.hashicorp.com/connect-inject": "false"
+        "consul.hashicorp.com/gateway-kind": "terminating-gateway"
+        {{- if $root.Values.global.enableConsulNamespaces }}
+        "consul.hashicorp.com/gateway-namespace": {{ (default $defaults.consulNamespace .consulNamespace) }}
+        {{- end }}
         {{- if (and $root.Values.global.secretsBackend.vault.enabled $root.Values.global.tls.enabled) }}
         "vault.hashicorp.com/agent-init-first": "true"
         "vault.hashicorp.com/agent-inject": "true"
@@ -81,7 +86,6 @@ spec:
         {{ tpl $root.Values.global.secretsBackend.vault.agentAnnotations $root | nindent 8 | trim }}
         {{- end }}
         {{- end }}
-        "consul.hashicorp.com/connect-inject": "false"
         {{- if (and $root.Values.global.metrics.enabled $root.Values.global.metrics.enableGatewayMetrics) }}
         "prometheus.io/scrape": "true"
         "prometheus.io/path": "/metrics"
@@ -110,8 +114,6 @@ spec:
       terminationGracePeriodSeconds: 10
       serviceAccountName: {{ template "consul.fullname" $root }}-{{ .name }}
       volumes:
-        - name: consul-bin
-          emptyDir: {}
         - name: consul-service
           emptyDir:
             medium: "Memory"
@@ -144,34 +146,8 @@ spec:
             - key: {{ default "tls.crt" $root.Values.global.tls.caCert.secretKey }}
               path: tls.crt
         {{- end }}
-        {{- if $root.Values.global.tls.enableAutoEncrypt }}
-        - name: consul-auto-encrypt-ca-cert
-          emptyDir:
-            medium: "Memory"
-        {{- end }}
         {{- end }}
       initContainers:
-        # We use the Envoy image as our base image so we use an init container to
-        # copy the Consul binary to a shared directory that can be used when
-        # starting Envoy.
-        - name: copy-consul-bin
-          image: {{ $root.Values.global.image | quote }}
-          command:
-          - cp
-          - /bin/consul
-          - /consul-bin/consul
-          volumeMounts:
-          - name: consul-bin
-            mountPath: /consul-bin
-          {{- $initContainer := .initCopyConsulContainer }}
-          {{- if (or $initContainer $defaults.initCopyConsulContainer) }}
-          {{- if (default $defaults.initCopyConsulContainer.resources $initContainer.resources) }}
-          resources: {{ toYaml (default $defaults.initCopyConsulContainer.resources $initContainer.resources) | nindent 12 }}
-          {{- end }}
-          {{- end }}
-        {{- if (and $root.Values.global.tls.enabled $root.Values.global.tls.enableAutoEncrypt) }}
-        {{- include "consul.getAutoEncryptClientCA" $root | nindent 8 }}
-        {{- end }}
         # terminating-gateway-init registers the terminating gateway service with Consul.
         - name: terminating-gateway-init
           image: {{ $root.Values.global.imageK8S }}
@@ -188,77 +164,45 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             {{- if $root.Values.global.tls.enabled }}
-            - name: CONSUL_HTTP_ADDR
-              value: https://$(HOST_IP):8501
             - name: CONSUL_CACERT
               value: /consul/tls/ca/tls.crt
-            {{- else }}
-            - name: CONSUL_HTTP_ADDR
-              value: http://$(HOST_IP):8500
             {{- end }}
+            - name: CONSUL_HTTP_ADDR
+              {{- if $root.Values.global.tls.enabled }}
+              value: "https://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8501"
+              {{- else }}
+              value: "http://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8500"
+              {{- end }}
           command:  
             - "/bin/sh"
             - "-ec"
             - |
-                {{- if $root.Values.global.acls.manageSystemACLs }}
-                consul-k8s-control-plane acl-init \
-                  -component-name=terminating-gateway/{{ template "consul.fullname" $root }}-{{ .name }} \
-                  -acl-auth-method={{ template "consul.fullname" $root }}-k8s-component-auth-method \
-                  {{- if $root.Values.global.adminPartitions.enabled }}
-                  -partition={{ $root.Values.global.adminPartitions.name }} \
-                  {{- end }}
-                  -token-sink-file=/consul/service/acl-token \
+                consul-k8s-control-plane connect-init -pod-name=${POD_NAME} -pod-namespace=${POD_NAMESPACE} \
                   -consul-api-timeout={{ $root.Values.global.consulAPITimeout }} \
+                  -gateway-kind="terminating-gateway" \
+                  -consul-node-name="k8s-service-mesh" \
+                  -proxy-id-file=/consul/service/proxyid \
+                  {{- if $root.Values.global.acls.manageSystemACLs }}
+                  -acl-auth-method={{ template "consul.fullname" $root }}-k8s-component-auth-method \
+                  -acl-token-sink=/consul/service/acl-token \
+                  {{- end }}
+                  -service-name={{ .name }} \
                   -log-level={{ default $root.Values.global.logLevel }} \
                   -log-json={{ $root.Values.global.logJSON }}
-                {{- end }}
-
-                cat > /consul/service/service.hcl << EOF
-                service {
-                  kind = "terminating-gateway"
-                  name = "{{ .name }}"
-                  id = "${POD_NAME}"
-                  {{- if $root.Values.global.enableConsulNamespaces }}
-                  namespace = "{{ (default $defaults.consulNamespace .consulNamespace) }}"
-                  {{- end }}
-                  {{- if $root.Values.global.adminPartitions.enabled }}
-                  partition = "{{ $root.Values.global.adminPartitions.name }}"
-                  {{- end }}
-                  address = "${POD_IP}"
-                  port = 8443
-                  {{- if (and $root.Values.global.metrics.enabled $root.Values.global.metrics.enableGatewayMetrics) }}
-                  proxy { config { envoy_prometheus_bind_addr = "${POD_IP}:20200" } }
-                  {{- end }}
-                  checks = [
-                    {
-                      name = "Terminating Gateway Listening"
-                      interval = "10s"
-                      tcp = "${POD_IP}:8443"
-                      deregister_critical_service_after = "6h"
-                    }
-                  ]
-                }
-                EOF
-
-                /consul-bin/consul services register \
-                  {{- if $root.Values.global.acls.manageSystemACLs }}
-                  -token-file=/consul/service/acl-token \
-                  {{- end }}
-                  /consul/service/service.hcl
           volumeMounts:
             - name: consul-service
               mountPath: /consul/service
-            - name: consul-bin
-              mountPath: /consul-bin
             {{- if $root.Values.global.tls.enabled }}
-            {{- if $root.Values.global.tls.enableAutoEncrypt }}
-            - name: consul-auto-encrypt-ca-cert
-            {{- else }}
+            {{- if not (and $root.Values.externalServers.enabled $root.Values.externalServers.useSystemRoots) }}
             - name: consul-ca-cert
-            {{- end }}
               mountPath: /consul/tls/ca
               readOnly: true
+            {{- end }}
             {{- end }}
           resources:
             requests:
@@ -270,28 +214,24 @@ spec:
       containers:
         - name: terminating-gateway
           image: {{ $root.Values.global.imageEnvoy | quote }}
+          volumeMounts:
+            - name: consul-service
+              mountPath: /consul/service
+              readOnly: true
+            {{- if $root.Values.global.tls.enabled }}
+            {{- if not (and $root.Values.externalServers.enabled $root.Values.externalServers.useSystemRoots) }}
+            - name: consul-ca-cert
+              mountPath: /consul/tls/ca
+              readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- range (default $defaults.extraVolumes .extraVolumes) }}
+            - name: userconfig-{{ .name }}
+              readOnly: true
+              mountPath: /consul/userconfig/{{ .name }}
+            {{- end }}
           {{- if (default $defaults.resources .resources) }}
           resources: {{ toYaml (default $defaults.resources .resources) | nindent 12 }}
-          {{- end }}
-          volumeMounts:
-          - name: consul-bin
-            mountPath: /consul-bin
-          - mountPath: /consul/service
-            name: consul-service
-            readOnly: true
-          {{- if $root.Values.global.tls.enabled }}
-          {{- if $root.Values.global.tls.enableAutoEncrypt }}
-          - name: consul-auto-encrypt-ca-cert
-          {{- else }}
-          - name: consul-ca-cert
-          {{- end }}
-            mountPath: /consul/tls/ca
-            readOnly: true
-          {{- end }}
-          {{- range (default $defaults.extraVolumes .extraVolumes) }}
-          - name: userconfig-{{ .name }}
-            readOnly: true
-            mountPath: /consul/userconfig/{{ .name }}
           {{- end }}
           env:
             - name: HOST_IP
@@ -311,30 +251,23 @@ spec:
               value: "/consul/service/acl-token"
             {{- end }}
             {{- if $root.Values.global.tls.enabled }}
-            - name: CONSUL_HTTP_ADDR
-              value: https://$(HOST_IP):8501
-            - name: CONSUL_GRPC_ADDR
-              value: https://$(HOST_IP):8502
             - name: CONSUL_CACERT
               value: /consul/tls/ca/tls.crt
-            {{- else }}
+            {{- end }}
             - name: CONSUL_HTTP_ADDR
-              value: http://$(HOST_IP):8500
+              {{- if $root.Values.global.tls.enabled }}
+              value: "https://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8501"
+              {{- else }}
+              value: "http://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8500"
+              {{- end }}
             - name: CONSUL_GRPC_ADDR
-              value: $(HOST_IP):8502
-            {{- end }}
+              {{- if $root.Values.global.tls.enabled }}
+              value: "https://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8502"
+              {{- else }}
+              value: "http://{{ template "consul.fullname" $root }}-server.{{ $root.Release.Namespace }}.svc:8502"
+              {{- end }}
           command:
-            - /consul-bin/consul
-            - connect
-            - envoy
-            - -gateway=terminating
-            - -proxy-id=$(POD_NAME)
-            {{- if $root.Values.global.enableConsulNamespaces }}
-            - -namespace={{ default $defaults.consulNamespace .consulNamespace }}
-            {{- end }}
-            {{- if $root.Values.global.adminPartitions.enabled }}
-            - -partition={{ $root.Values.global.adminPartitions.name }}
-            {{- end }}
+            - sleep infinity
           livenessProbe:
             tcpSocket:
               port: 8443
@@ -354,78 +287,6 @@ spec:
           ports:
             - name: gateway
               containerPort: 8443
-          lifecycle:
-            preStop:
-              exec:
-                command:
-                  - "/bin/sh"
-                  - "-ec"
-                  - |
-                      /consul-bin/consul services deregister \
-                      {{- if $root.Values.global.enableConsulNamespaces }}
-                      -namespace={{ default $defaults.consulNamespace .consulNamespace }} \
-                      {{- end }}
-                      {{- if $root.Values.global.adminPartitions.enabled }}
-                      -partition={{ $root.Values.global.adminPartitions.name }} \
-                      {{- end }}
-                      -id="${POD_NAME}"
-                  {{- if $root.Values.global.acls.manageSystemACLs }}
-                  - "/consul-bin/consul logout"
-                  {{- end}}
-
-        # consul-sidecar ensures the terminating gateway is always registered with
-        # the local Consul agent, even if it loses the initial registration.
-        - name: consul-sidecar
-          image: {{ $root.Values.global.imageK8S }}
-          volumeMounts:
-            - name: consul-service
-              mountPath: /consul/service
-              readOnly: true
-            - name: consul-bin
-              mountPath: /consul-bin
-            {{- if $root.Values.global.tls.enabled }}
-            {{- if $root.Values.global.tls.enableAutoEncrypt }}
-            - name: consul-auto-encrypt-ca-cert
-            {{- else }}
-            - name: consul-ca-cert
-            {{- end }}
-              mountPath: /consul/tls/ca
-              readOnly: true
-            {{- end }}
-          {{- if  $root.Values.global.consulSidecarContainer }}
-          {{- if $root.Values.global.consulSidecarContainer.resources }}
-          resources: {{ toYaml $root.Values.global.consulSidecarContainer.resources | nindent 12 }}
-          {{- end }}
-          {{- end }}
-          env:
-            - name: HOST_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.hostIP
-            - name: POD_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-            {{- if $root.Values.global.tls.enabled }}
-            - name: CONSUL_HTTP_ADDR
-              value: https://$(HOST_IP):8501
-            - name: CONSUL_CACERT
-              value: /consul/tls/ca/tls.crt
-            {{- else }}
-            - name: CONSUL_HTTP_ADDR
-              value: http://$(HOST_IP):8500
-            {{- end }}
-          command:
-            - consul-k8s-control-plane
-            - consul-sidecar
-            - -log-level={{ $root.Values.global.logLevel }}
-            - -log-json={{ $root.Values.global.logJSON }}
-            - -service-config=/consul/service/service.hcl
-            - -consul-binary=/consul-bin/consul
-            - -consul-api-timeout={{ $root.Values.global.consulAPITimeout }}
-            {{- if $root.Values.global.acls.manageSystemACLs }}
-            - -token-file=/consul/service/acl-token
-            {{- end }}
       {{- if (default $defaults.priorityClassName .priorityClassName) }}
       priorityClassName: {{ (default $defaults.priorityClassName .priorityClassName) | quote }}
       {{- end }}
